<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/darkTextColor"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/textView"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_not_supported_title" />

            <TextView
                android:textColor="@color/darkTextColor"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/textView2"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_not_supported_msg" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_love_wallpaper" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:textColor="@color/icon_tint"
                android:id="@+id/close"
                android:background="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_app"
                android:layout_weight="1" />

            <Button
                android:textColor="@color/icon_tint"
                android:id="@+id/staticWallpaper"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_me"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
