<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:textColor="#fff"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="15dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/preview"
            android:layout_weight="1" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/random"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_random"
            app:tint="#fff" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/rateUs"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:tint="#fff" />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/more"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            app:tint="#fff" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <UEnginePackage.Views.LiveWallpaperViewUgl
            android:id="@+id/liveWallpaperView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/randomizeEffect"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_dot"
        app:tint="@color/colorPrimary"
        android:alpha="0" />

    <ImageView
        android:id="@+id/randomizeEffect2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_circle"
        app:tint="@color/colorPrimary"
        android:alpha="0" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/optionsLayout">

        <LinearLayout
            android:layout_gravity="right"
            android:orientation="vertical"
            android:background="@drawable/top_rounded"
            android:paddingLeft="8dp"
            android:visibility="gone"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Switch
                android:textColor="@color/colorAccent2"
                android:id="@+id/glitterSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Glitter" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/optionsLayout">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/wallpapers"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i1"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_wallpaper_black_24dp"
                            android:adjustViewBounds="true"
                            app:tint="@color/colorAccent2"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="@color/colorAccent2"
                            android:layout_gravity="center"
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wallpapers"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/particles"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i2"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/icc_actors"
                            android:adjustViewBounds="true"
                            app:tint="@color/colorAccent2"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="@color/colorAccent2"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/particles"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/behavior"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i3"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/icc_effects"
                            android:adjustViewBounds="true"
                            app:tint="@color/colorAccent2"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="@color/colorAccent2"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/animations"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:background="#45afafaf"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/options"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i4"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/icc_settings"
                            android:adjustViewBounds="true"
                            app:tint="@color/colorAccent2"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="@color/colorAccent2"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/options"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/clickEffect"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i5"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/icc_magic_touch"
                            android:adjustViewBounds="true"
                            app:tint="@color/colorAccent2"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="@color/colorAccent2"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/touch_effect"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/apply"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/i6"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_checked"
                            android:adjustViewBounds="true"
                            app:tint="#fa9d00"
                            android:layout_weight="1" />

                        <TextView
                            android:textColor="#fa9d00"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/apply"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/optionsLayout"
        android:background="@drawable/rounded1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:scaleType="center"
                android:adjustViewBounds="true"
                app:tint="@color/colorPrimary"
                android:layout_weight="1" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/particles_options"
                android:layout_weight="7" />
        </LinearLayout>

        <View
            android:background="#45afafaf"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:layout_weight="1" />

            <SeekBar
                android:id="@+id/size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="200"
                android:progress="50"
                android:layout_weight="4" />
        </LinearLayout>

        <View
            android:background="#45afafaf"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:layout_weight="1" />

            <SeekBar
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="50"
                android:layout_weight="4" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:background="#45afafaf"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:layout_weight="1" />

            <SeekBar
                android:id="@+id/speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="160"
                android:progress="50"
                android:layout_weight="4" />
        </LinearLayout>

        <View
            android:background="#45afafaf"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/border_collision"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
